--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@adonisjs/auth": "^5.1.1",
     "@adonisjs/core": "^5.0.4-preview-rc-2.1",
     "@adonisjs/lucid": "^10.0.0",
+    "@adonisjs/mail": "^5.2.3",
     "@adonisjs/repl": "^1.1.6",
     "@adonisjs/session": "^4.0.6",
     "@adonisjs/view": "^3.1.0",
